# hypershop-backend

./: .dockerignore  .env.example  .env.prod.example  .gitignore  BUILD.md  DEPLOY-CHECKLIST.md  DEPLOY.md  DEPLOY_RENDER.md  Dockerfile  Dockerfile.worker  GO_LIVE_AUDIT.md  MOBILE_DEMO_LOGINS.md  Makefile  PROD_DEPLOY.md  README.md  _demo_up.sh  _fix_pdp_mapper.py  _imgupd.sql  _verify_mobileauth.py  _verify_rider_dev.py  _verify_social.py  _wfimg.sql  alembic.ini  apply_wiring.py  audit_go_live.py  boot_preflight.py  docker-compose.localdemo.yml  docker-compose.observability.prod.yml  docker-compose.observability.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.tls.yml  docker-compose.yml  gen_and_upload_images.py  gen_products_seed.py  hero_greatdeals.py  image_manifest.csv  port_to_fe.py  probe_24pages.sh  probe_mobile.sh  (+9 more)
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: backend-ci.yml  ci.yml  loadtest.yml  readiness.yml
alembic/: env.py
alembic/versions/: 2026_04_28_0001-0001_init_audit_outbox_idem.py  2026_04_28_0002-0002_iam.py  2026_04_28_0003-0003_catalog.py  2026_05_03_0004-0004_catalog_medicine.py  2026_05_03_0005-0005_inventory.py  2026_05_03_0006-0006_orders.py  2026_05_03_0007-0007_delivery.py  2026_05_03_0009-0009_customer_wallet.py  2026_05_03_0010-0010_reminders.py  2026_05_03_0011-0011_packing.py  2026_05_03_0012-0012_deliveries.py  2026_05_03_0013-0013_returns.py  2026_05_03_0014-0014_compliance.py  2026_05_03_0015-0015_finance.py  2026_05_03_0016-0016_ai.py  2026_05_03_0017-0017_mobile.py  2026_05_04_0020-0020_payments.py  2026_05_04_0021-0021_whatsapp_message_statuses.py  2026_05_04_0022-0022_seed_default_delivery_zones.py  (+78 more)
app/: __init__.py  cli.py  conftest.py  main.py  worker.py  worker_healthcheck.py
caddy/: Caddyfile  Caddyfile.observability
docs/: AUTHORITY_MATRIX.md  HARDENED_2026-05-13_CHANGELOG.md  MODULE_47_CUSTOMER_CARE.md  MONITORING_DASHBOARD.md  MONITORING_MODULE_35.md  NOTIFICATIONS_AUDIT.md  OBSERVABILITY_TRACING.md  PAYMENTS_OPS.md  PHOTO_ONBOARDING_KIT.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_AUDIT_2026-05-13.md  REVIEWS_FRONTEND_SPEC.md  ROLLBACK_MODULE_35.md  SCOPING_MULTISELLER.md  SCOPING_REVIEWS.md  SEO_GOLIVE_OPS.md  SEO_GO_LIVE_OPS.md  customer-mobile-api.md  doctor-app-api.md  doctor-offline-sync.md  provider-bindings.md  rider-app-api.md  session-2026-05-03-foundation-and-auth.md
loadtest/: README.md  k6-ads-auction.js  k6-baseline.js  k6-readonly.js  k6-smoke.js  k6-soak.js  k6-stress.js
scripts/: MODULE_GOVERNANCE.md  _smoke_module_config_guards.py  _smoke_reconcile_handler.py  assign_anonymous_photos.py  brand_photo_manifest.example.yaml  brand_photo_smoke.yaml.failures.txt  brand_photos_wikipedia.yaml  build_v8_zip.py  check_module_contracts.py  download_brand_photos.py  enrich_visuals.py  export_iam_state.py  export_module_config.py  fix_product_image_tags.py  import_module_config.py  ingest_photos.py  module_grandfather.txt  photo_ingest_plan.example.yaml  photo_ingest_plan.hypershop_add.yaml  photo_ingest_plan.wikipedia.yaml  photo_match.py  product_images_template.csv  promote_admin_to_super_admin.py  recompute_seller_ratings.py  render_start.sh  run_readiness.sh  run_tests_local.ps1  run_tests_local.sh  seed_admin_demo_a.sql  seed_admin_demo_a2.sql  seed_bulk_upload_demo.sql  seed_catalog_attributes.sql  seed_catalog_demo.py  seed_dev_dashboard_data.py  seed_dev_logins.py  seed_dev_seller.py  seed_fulfillment_demo.py  seed_gap_admin_lite.sql  seed_gap_referrals.sql  seed_gap_wallets.sql  (+28 more)
security/: SECURITY-AUDIT-2026-05-17.md
tests/: conftest.py  test_core_kernel.py  test_health.py  test_module_30_reporting_smoke.py  test_module_31_rider_routing_smoke.py  test_module_32_rider_wallet_smoke.py  test_module_33_supplier_payments_smoke.py  test_module_34_seo_smoke.py  test_uow_audit_outbox.py
(+933 files in other folders)
